...
        General Strings
    -->
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
...
    <string name="product_height">Height</string>
    <string name="product_dimensions">Dimensions</string>
    <string name="product_shipping_class">Shipping class</string>
    <string name="product_no_shipping_class">No shipping class</string>
    <string name="product_shipping_settings">Shipping settings</string>
    <string name="product_total_orders">Total orders</string>
    <string name="product_reviews">Reviews</string>
    <string name="product_downloads">Downloads</string>
    <string name="product_downloadable_files">Downloadable files</string>
    <string name="product_download_limit">Limit</string>
    <string name="product_download_limit_count">%d downloads</string>
    <string name="product_download_expiry">Expiry</string>
    <string name="product_download_expiry_days">%d days</string>
...
    <string name="orders_empty_message_with_order_status_filter">We\'re sorry, we couldn\'t find any \"%s\" orders</string>
    <string name="empty_message_with_search">We\'re sorry, we couldn\'t find results for \"%s\"</string>
    <string name="reviews_empty_message">No reviews yet!</string>
    <!--
        Settings
    -->
    <string name="settings">Settings</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="feature_requests">Feature request</string>
    <string name="beta_features">Beta features</string>
    <string name="settings_signout">Log out</string>
    <string name="settings_confirm_logout">Are you sure you want to logout from the account %s?</string>
    <string name="settings_send_stats">Collect information</string>
...
    -->
    <string name="toggle_option_checked">option checked</string>
    <string name="toggle_option_not_checked">option not checked</string>
    <!--
        Help and support
    -->
    <string name="support_help">Help &amp; support</string>
    <string name="support_email_subject">WooCommerce Android %s support</string>
    <string name="invalid_email_message">Your email address isn\'t valid</string>
    <string name="support_identity_input_dialog_enter_email_and_name">To continue please enter your email address and name</string>
    <string name="support_identity_input_dialog_enter_email">Please enter your email address</string>
    <string name="support_identity_input_dialog_email_label">Email</string>
    <string name="support_identity_input_dialog_name_label">Name</string>
...
